# mntogether

./: .clauderules  .dockerignore  .env.example  .gitignore  AUTHENTICATION_SECURITY.md  Cargo.toml  DEV_CLI.md  DEV_SETUP_COMPLETE.md  DOCKER_GUIDE.md  DOCKER_SETUP.md  MIGRATION_CLAUDE_VOYAGE.md  Makefile  OPENAI_CLIENT_REFACTOR.md  PRODUCTION_READINESS.md  README.md  REFACTORING_COMPLETE.md  RESTATE_MIGRATION_BLOCKERS.md  RESTATE_MIGRATION_SUMMARY.md  SCHEMA_DESIGN.md  SCHEMA_RELATIONSHIPS.md  SECURITY.md  SQL_QUERY_REFACTORING.md  TESTING_WORKFLOWS.md  TWILIO_EMAIL_IMPLEMENTATION.md  WEB_APP_MIGRATION.md  claude.md  deploy.sh  dev.sh  dev.sh.bak  docker-compose.prod.yml  docker-compose.yml  fly.toml  infra.toml  install.sh  package.json  vercel.json
.cargo/: config.toml
.claude/: launch.json  rules.md  settings.json
.claude/hooks/: guard-code-patterns.sh  guard-db-commands.sh  guard-migrations.sh
.dev/: config.toml  history.json
.github/workflows/: deploy-frontend.yml  deploy-server.yml  deploy-web-next.yml  deploy-web.yml
data/: README.md  audit-seed.baseline.json  audit-seed.mjs  immigrant_resources_seed.json  local_test_db.sql  organizations.json  posts.json  seed-signal-inbox.mjs  seed.mjs  signal_inbox_mock.json  tags.json  widgets.json
dev/cli/: Cargo.toml
dev/cli/src/: main.rs
dev/cli/src/cmd/: db.rs  docker.rs  migrate.rs  mod.rs  scripts.rs
docs/: API_INTEGRATION_GUIDE.md  CHAT_ARCHITECTURE.md  CLAUDE_CODE_HOOKS.md  DECISIONS_LOG.md  DOCS_AUDIT.md  INSTITUTIONAL_LEARNINGS.md  Immigrant Resources for Action (January 2026) - Copy.xlsx  LOCAL_DEV_SETUP.md  NEED_SYNCHRONIZATION.md  NEWSLETTER_INGESTION_RESEARCH.md  OPENAI_CLIENT_REFACTOR.md  POST_TYPE_SYSTEM.md  README.md  RESTATE_MIGRATION_SUMMARY.md  SEESAW_ARCHITECTURE.md  SNAPSHOT_TRACEABILITY.md  TECHNICAL_SPIKES.md  TESTING_WORKFLOWS.md  TODO.md  USER_SUBMITTED_NEEDS.md
docs/admin/: ADMIN_EMAIL_SETUP.md  ADMIN_IDENTIFIERS_MIGRATION.md  ADMIN_QUICK_START.md  POST_ROTATION_SYSTEM.md  TWILIO_EMAIL_IMPLEMENTATION.md
docs/architecture/: ABUSE_REPORTING.md  ARCHITECTURE_DECISIONS.md  BROADSHEET_LAYOUT_EDITOR.md  CAUSE_COMMERCE_ARCHITECTURE.md  CMS_EXPERIENCE.md  CMS_SYSTEM_SPEC.md  COMPONENT_INVENTORY.md  CURATOR_PIPELINE.md  DATABASE_SCHEMA.md  DATA_MODEL.md  DESIGN_TOKENS.md  DOMAIN_ARCHITECTURE.md  EDITION_COCKPIT.md  EDITION_KANBAN.md  EDITION_STATUS_MODEL.md  EDITORIAL_WORKFLOW_REWORK.md  EMAIL_NEWSLETTER.md  EMBEDDING_FEATURES_REFERENCE.md  MAP_PAGE_PLAN.md  NAVIGATION_HIERARCHY.md  PACKAGE_STRUCTURE.md  PII_SCRUBBING.md  POST_TYPE_SYSTEM.md  ROOT_EDITORIAL_PIVOT.md  ROOT_SIGNAL_DATA_CONTRACT.md  ROOT_SIGNAL_SPEC.md  ROW_TEMPLATES.md  RUST_IMPLEMENTATION.md  RUST_PROJECT_STRUCTURE.md  SCHEMA_DESIGN.md  SCHEMA_RELATIONSHIPS.md  SIGNAL_INBOX.md  SIMPLIFIED_SCHEMA.md  STORY_EDITOR.md  TAGS_VS_FIELDS.md  WIDGET_SYSTEM.md  backend-overview.md  (+1 more)
infra/: .gitignore  README.md  deploy.sh  package.json
scripts/: docker-entrypoint-nextjs.sh  register-workflows.sh  start-workflows.sh
todos/: 001-complete-p1-cors-misconfiguration.md  002-complete-p1-missing-rate-limiting.md  003-complete-p1-kernel-domain-circular-dependency.md  004-complete-p1-ai-prompt-injection-vulnerability.md  005-complete-p1-vector-search-index-misconfiguration.md  006-complete-p2-connection-pool-too-small.md  007-pending-p2-duplicate-dependency-containers.md  008-pending-p2-transaction-boundaries-missing.md  009-pending-p2-embedding-api-no-cache.md
(+177 files in other folders)
