[workspace]
resolver = "2"
members = [
    "packages/server",
    "packages/twilio-rs",
    "packages/extraction",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MN Together"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }

# GraphQL
juniper = { version = "0.16", features = ["uuid", "chrono"] }
juniper_axum = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# AI/ML
rig-core = "0.7"

# Crypto
sha2 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# UUID
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
testcontainers = "0.23"

# CLI
colored = "2.1"
dialoguer = "0.11"
console = "0.15"
which = "6.0"
open = "5.3"
