[workspace]
resolver = "2"
members = [
    "packages/server",
    "packages/twilio-rs",
    "packages/extraction",
    "packages/openai-client",
    "packages/apify-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MN Together"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# AI/ML - via extraction library, no longer using rig-core directly
# rig-core = "0.7"  # Removed - using extraction::ai::OpenAI instead

# Crypto
sha2 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# UUID
uuid = { version = "1.11", features = ["v4", "v5", "v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
testcontainers = "0.23"
